# rekarisk

./: .gitignore  CHANGELOG.md  IMPROVEMENT_ROADMAP.md  LICENSE  README.md  gen_fera_charts.py  gen_final_chart.py  gen_final_v2_chart.py  gen_improvement_chart.py  gen_qra_charts.py  gen_qra_full_comparison.py  generate_fera_report.py  generate_pdf_report.py  pyproject.toml  regen_domino.py  regen_plots.py  requirements.txt  run_domino_demo.py  run_fera_comparison.py  run_fera_comparison_v2.py  run_qra_7iso.py  run_qra_comparison.py  run_risk_scenario.py  screenshot_all.py  screenshot_domino.py  screenshot_mixture.py  screenshot_remaining.py  setup.py  test_phase11.py  test_qra_pipeline.py
.github/workflows/: ci.yml  tests.yml
data/: pasquill_coefficients.json  substances.json
docs/: CONSEQUENCE_ANALYSIS_PLAN.md  INSTALLATION.md  METHODOLOGY.md  TEST_CASES.md  TUTORIAL.md  USER_MANUAL.md  VALIDATION.md
help/: help_topics.json
scripts/: build_linux.sh  build_windows.bat  build_windows.sh  gen_substances.py  gen_substances_part1.py
src/rekarisk/: __init__.py  __main__.py  __version__.py  cli.py
src/rekarisk/analysis/: __init__.py  batch_runner.py  monte_carlo.py  sensitivity.py  worst_case.py
src/rekarisk/core/: __init__.py  audit_trail.py  checkpoint.py  constants.py  dippr.py  eos.py  hydrate.py  phase_envelope.py  project_file.py  substance.py  substance_db.py  units.py  validation.py
src/rekarisk/meteorology/: __init__.py  indonesia_locations.py  meteorology.py  stability.py  weather_data.py  wind_rose.py
src/rekarisk/models/: __init__.py
src/rekarisk/models/dispersion/: __init__.py  dense_gas.py  dispersion_dispatcher.py  gaussian_plume.py  (+1 more)
src/rekarisk/report/: __init__.py  excel_export.py  gis_export.py  image_export.py  pdf_generator.py  text_export.py
src/rekarisk/terrain/: __init__.py  dem_loader.py  los_engine.py  obstacle.py
src/rekarisk/ui/: __init__.py  audit_viewer.py  batch_dialog.py  calculations.py  case_comparison.py  dispersion_panel.py  dispersion_results.py  domino_panel.py  domino_results.py  explosion_panel.py  explosion_results.py  fire_panel.py  fire_results.py  main_window.py  mc_handlers.py  menu_bar.py  mixture_editor.py  monte_carlo_dialog.py  project_panel.py  qra_panel.py  qra_results.py  report_dialog.py  sensitivity_dialog.py  source_term_panel.py  source_term_results.py  substance_selector.py  terrain_dialog.py  vulnerability_panel.py  vulnerability_results.py  weather_dialog.py
tests/: conftest.py  test_dispersion.py  test_eos.py  test_explosion.py  test_fire.py  test_integration_workflows.py  test_meteorology.py  test_module_integration.py  test_phase9_validation.py  test_qra.py  test_source_term.py  test_ui_integration.py  test_vulnerability.py
(+32 files in other folders)
